objects/RetailStore.object
<CustomObject>
    <fields>
        <fullName>All_Windows_Replaced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for a property that has had every window replaced by Bristol Windows</description>
        <label>All Windows Replaced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_of_Total_Living_Space_Square_Feet__c</fullName>
        <label>Area of Total Living Space (Square Feet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessed_Land_Value__c</fullName>
        <label>Assessed Land Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessed_Total_Value__c</fullName>
        <label>Assessed Total Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <label>Bathrooms</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color_of_Building__c</fullName>
        <label>Color of Building</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Grey</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Tan</fullName>
                </value>
                <value>
                    <fullName>Beige</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Indigo</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyCam_Project_ID__c</fullName>
        <label>CompanyCam Project ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyCam_Project__c</fullName>
        <description>COME BACK AND FIX THIS ONCE INTEGRATED! DON&apos;T FORGET!</description>
        <formula>IF(
    ISBLANK(CompanyCam_Project_ID__c), 
    HYPERLINK(&quot;initVFpageURL c.vf.force.com/apex/CompanyCamProjectInit_RetailStore?id=&quot; + Id , &quot;Create Project In CompanyCam&quot;, 
    &quot;_blank&quot;),
    HYPERLINK(&quot;vfPageURL&quot; + Id, &quot;See CompanyCam Photos&quot;, &quot;_blank&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CompanyCam Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction_Type__c</fullName>
        <label>Construction Type</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Buildings__c</fullName>
        <label>Count: Buildings:</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Fireplace__c</fullName>
        <label>Count: Fireplace</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Stories__c</fullName>
        <description>from the maps data layer</description>
        <inlineHelpText>from the maps data layer</inlineHelpText>
        <label>Count: Stories</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Units__c</fullName>
        <label>Count: Units</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deed_Last_Sale_Date__c</fullName>
        <description>it&apos;s a date time for some god dam reason</description>
        <inlineHelpText>Down to the second</inlineHelpText>
        <label>Deed Last Sale Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deed_Last_Sale_Price__c</fullName>
        <label>Deed Last Sale Price:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Home__c</fullName>
        <label>Est. Home</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exterior_Styles__c</fullName>
        <label>Exterior Styles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brick</fullName>
                </value>
                <value>
                    <fullName>Stone</fullName>
                </value>
                <value>
                    <fullName>Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Owner_Type__c</fullName>
        <label>First Owner Type</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Owner_Occupied__c</fullName>
        <label>Flag: Owner Occupied</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_to_Value_Ratio_LTV__c</fullName>
        <label>Loan-to-Value Ratio (LTV):</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Area_Square_Footage__c</fullName>
        <label>Lot Area (Square Footage)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Depth_Feet__c</fullName>
        <label>Lot Depth (Feet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Width_Feet__c</fullName>
        <label>Lot Width (Feet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MapsText_1__c</fullName>
        <description>some text i suppose.</description>
        <inlineHelpText>Maybe some text Too!!!</inlineHelpText>
        <label>MapsText_1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Stories__c</fullName>
        <label>Number of Stories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_1_Name_Full__c</fullName>
        <label>Owner 1 Name Full</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Name_Full__c</fullName>
        <label>Owner 2 Name Full</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Occupied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Occupied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Assessed_Value__c</fullName>
        <label>Previous Assessed Value:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Exterior_Wall_Covering_Material__c</fullName>
        <label>Primary Exterior Wall Covering Material</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchased_Year__c</fullName>
        <description>The Year this Property was most recently purchased. Used for Lead Scoring and estimating Equity.</description>
        <inlineHelpText>When was this Property Purchased/Sold?</inlineHelpText>
        <label>Purchased Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roof_Material__c</fullName>
        <label>Roof Material</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Owner_Type__c</fullName>
        <label>Second Owner Type</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structure_Style_Type__c</fullName>
        <label>Structure Style Type</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision_Name__c</fullName>
        <label>Subdivision Name:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Assessed_Value_Improvements__c</fullName>
        <label>Tax: Assessed Value Improvements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Assessed_Value_Total__c</fullName>
        <label>Tax: Assessed Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Market_Value_Improvements__c</fullName>
        <label>Tax: Market Value Improvements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Market_Value_Land__c</fullName>
        <label>Tax: Market Value Land</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Market_Value_Total__c</fullName>
        <label>Tax: Market Value Total:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Rooms__c</fullName>
        <label>Total Rooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Built_Adjusted_for_Structural_Chan__c</fullName>
        <label>Year Built (Adjusted for Structural Chan</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Built_Primary_Structure__c</fullName>
        <label>Year Built (Primary Structure)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_Owned__c</fullName>
        <description>This is read only. Suck you later, loser.</description>
        <formula>PrimaryContact.Length_of_Residence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is read only. Suck you later, loser.</inlineHelpText>
        <label>Years Owned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmlProperty_Name__c</fullName>
        <formula>Street + &quot;, &quot; +  City + &quot;, &quot; + State</formula>
        <label>fmlProperty Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mapNo_2__c</fullName>
        <description>no decimals</description>
        <label>mapNo_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mapNo_3__c</fullName>
        <description>Some more Numbers!!! Some more some more nUMBERS!!! SOME more nubmers!!! Mnumbers!!! Numbers!!! SOme more numbers!!! Some heres some more numbers!!! some nUNUMBERS!! Some NUBMERS!!! Here&apos;s some NUMBERS!!! Some NUMBERS!!! Hers&quot;s some NUMBERS!!! Somemore NUMBERS!!! Here&apos;s a NUMBERS!!! HERES&apos;s some more NUMBERS!!! heres some NUMBERS!!!</description>
        <label>mapNo_3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mapsDate_1__c</fullName>
        <description>Her&apos;s a date field. heres the first date field!!!</description>
        <inlineHelpText>a date field. heres the first date field!!!</inlineHelpText>
        <label>mapsDate_1</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All_RetailStore</fullName>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>RetailLocationGroup</columns>
        <columns>CreatedDate</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <label>Household</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>